--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -47,13 +47,13 @@ jobs:
           SONAR_ORGANIZATION: ${{ secrets.SONAR_ORGANIZATION }}
           SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
         run: |
-          mvn clean verify sonar:sonar \
-            -Dsonar.organization=$SONAR_ORGANIZATION \
-            -Dsonar.projectKey=$SONAR_PROJECT_KEY \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.branch.name=${{ inputs.branch-name }} \
-            -Dsonar.token=$SONAR_TOKEN \
-            -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+          mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install org.jacoco:jacoco-maven-plugin:report sonar:sonar \
+          -Dsonar.organization=$SONAR_ORGANIZATION \
+          -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.branch.name=${{ inputs.branch-name }} \
+          -Dsonar.token=$SONAR_TOKEN
+          -Dsonar.java.coveragePlugin=jacoco \
 
       - name: Wait for SonarCloud Quality Gate
         run: |
