--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-dept: 0
 
       - name: Set up JDK
         uses: actions/setup-java@v3
@@ -56,7 +58,7 @@ jobs:
           -Dsonar.projectKey=$SONAR_PROJECT_KEY \
           -Dsonar.host.url=https://sonarcloud.io \
           -Dsonar.branch.name=${{ inputs.branch-name }} \
-          -Dsonar.token=$SONAR_TOKEN
+          -Dsonar.token=$SONAR_TOKEN \
           -Dsonar.java.coveragePlugin=jacoco \
           -Dsonar.coverage.exclusions=${{ inputs.coverage-exclusions }}
 
