--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -22,6 +22,8 @@ on:
         required: true
       SONAR_PROJECT_KEY:
         required: true
+      API_KEY:
+        required: false
 
 jobs:
   sonarcloud:
@@ -52,6 +54,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_ORGANIZATION: ${{ secrets.SONAR_ORGANIZATION }}
           SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+          API_KEY: ${{ secrets.API_KEY }}
         run: |
           mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install org.jacoco:jacoco-maven-plugin:report sonar:sonar \
           -Dsonar.organization=$SONAR_ORGANIZATION \
